--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "pug": "^3.0.2"
+    "mongoose": "^6.7.4",
+    "pug": "^3.0.2",
+    "serve-favicon": "^2.5.0"
   }
 }
